# omegabot

./: CMakeLists.txt  package.xml
config/: joystick.yaml
description/: omegabot.urdf.xacro  omegabot_core.xacro
launch/: joystick.launch.py  rsp.launch.py
src/App/: Connect.cpp  Connect.hpp  Exception.hpp  Gservo.cpp  Gservo.h  History.hpp  List.hpp  Vision.cpp  Vision.hpp  graphics.h  header.h  main.cpp  str.cpp  str.hpp
src/Arduino/: Arduino.ino  Bot.h  Camera.h  Claw.h  Config.h  Connection.h
src/arduino/: config.h
src/arduino_controller/: cmd_vel_subscriber.cpp  connect.cpp  connect.hpp
